# tests_for_mobile_2

./: .env.bstack  .env.credentials  .env.local_emulator  .gitignore  README.md  config.py  pyproject.toml  pytest.ini
tests/: conftest.py  conftest1.py  test_onboarding.py
utils/: allure.py  file.py
